Build: Coplete front-end functionality

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,7 +15,7 @@ div.even-result {
   margin: 0 auto;
 }
 
-form.form {
+div.creation-form {
   width: 50%;
   margin: 0 auto;
   section#firstSection {
