--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -52,7 +52,10 @@ div.creation-form {
       margin-bottom: 20px;
     }
   }
+  p.error-message {
+    color: red;
+  }
   button.submitButton {
-    margin-top: 30px;
+    margin: 30px 0;
   }
 }
