--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,11 @@ div.creation-form section#secondSection .participantInput {
   margin-bottom: 20px;
 }
 
+div.creation-form p.error-message {
+  color: red;
+}
+
 div.creation-form button.submitButton {
-  margin-top: 30px;
+  margin: 30px 0;
 }
 /*# sourceMappingURL=style.css.map */
