--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
 h1 {
   text-align: center;
   margin-bottom: 50px;
@@ -25,6 +29,20 @@ div.history table thead {
 
 div.history table tr:nth-child(2n) {
   background-color: lightcyan;
+}
+
+div.russian-result p,
+div.even-result p {
+  margin-bottom: 50px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 2.5rem;
+}
+
+div.russian-result button,
+div.even-result button {
+  display: block;
+  margin-bottom: 20px;
 }
 
 div.creation-form {
