--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -46,6 +46,26 @@ div.even-result {
   }
 }
 
+div.russian-result {
+  p.russian-payer {
+    color: red;
+    animation-name: magnifyingStart;
+    animation-duration: 1s;
+  }
+}
+
+@keyframes magnifyingStart {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 div.creation-form {
   width: 50%;
   margin: 0 auto;
