--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,10 +23,18 @@ div.history {
     width: 100%;
     thead {
       background-color: lightgray;
+      height: 40px;
     }
     tr {
       &:nth-child(2n) {
+        height: 30px;
         background-color: lightcyan;
+      }
+      td {
+        padding-left: 10px;
+        &:last-child {
+          text-align: center;
+        }
       }
     }
   }
@@ -109,4 +117,17 @@ div.creation-form {
   button.submitButton {
     margin: 30px 0;
   }
+}
+
+div#history-detail {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 30vw;
+  height: 50vh;
+  background-color: white;
+  border: 1px black solid;
+  padding: 20px;
+  box-shadow: 0 18px 50px -10px rgba(0, 0, 0, 0.2);
 }
