Fix: refactor the code

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -124,10 +124,10 @@ div#history-detail {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 30vw;
+  width: 20vw;
   height: 50vh;
   background-color: white;
   border: 1px black solid;
-  padding: 20px;
+  padding: 20px 50px;
   box-shadow: 0 18px 50px -10px rgba(0, 0, 0, 0.2);
 }
