--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,10 +1,25 @@
+body,
+html {
+  margin: 0;
+}
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+button {
+  background-color: paleturquoise;
+  border: none;
+  padding: 15px 25px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
 }
 
 h1 {
   text-align: center;
   margin-bottom: 50px;
+  margin-top: 0;
+  background-color: navy;
+  color: white;
+  line-height: 120px;
 }
 
 div#buttonWrapper {
@@ -119,6 +134,14 @@ div.creation-form {
   }
 }
 
+div.history {
+  button {
+    background-color: navy;
+    color: white;
+    padding: 5px 5px;
+  }
+}
+
 div#history-detail {
   position: absolute;
   left: 50%;
@@ -130,4 +153,7 @@ div#history-detail {
   border: 1px black solid;
   padding: 20px 50px;
   box-shadow: 0 18px 50px -10px rgba(0, 0, 0, 0.2);
+  button {
+    margin-top: 30px;
+  }
 }
