--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -66,6 +66,10 @@ div.even-result {
   button {
     display: block;
     margin-bottom: 20px;
+    &:last-child {
+      background-color: rgb(109, 109, 109);
+      color: white;
+    }
   }
 }
 
