--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,14 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+div#footer {
+  margin-top: 40px;
+}
+
+div#footer p {
+  text-align: center;
+}
+
 button {
   background-color: paleturquoise;
   border: none;
@@ -24,7 +32,7 @@ h1 {
 }
 
 div#buttonWrapper {
-  width: 50%;
+  width: 35%;
   margin: 50px auto;
 }
 
@@ -96,8 +104,12 @@ div.russian-result p.russian-payer {
 }
 
 div.creation-form {
-  width: 50%;
+  width: 35%;
   margin: 0 auto;
+}
+
+div.creation-form label {
+  font-size: 1.2rem;
 }
 
 div.creation-form section#firstSection {
@@ -135,6 +147,7 @@ div.creation-form section#secondSection {
 }
 
 div.creation-form section#secondSection .participantLabel {
+  font-size: 1rem;
   margin-right: 10px;
 }
 
