--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,11 @@ div#buttonWrapper {
   margin: 50px auto;
 }
 
-div.history,
+div.history {
+  width: 40%;
+  margin: 0 auto;
+}
+
 div.russian-result,
 div.even-result {
   width: 35%;
