--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -174,5 +174,10 @@ div#history-detail {
   box-shadow: 0 18px 50px -10px rgba(0, 0, 0, 0.2);
   button {
     margin-top: 30px;
+    &:last-child {
+      background-color: rgb(160, 0, 0);
+      color: white;
+      margin-left: 20px;
+    }
   }
 }
